--- a/project-user/config/config-docker.yaml
+++ b/project-user/config/config-docker.yaml
@@ -22,3 +22,9 @@ grpc:
 etcd:
   addrs:
     - "etcd3:2379"
+mysql:
+  username: root
+  password: "123456"
+  host: 127.0.0.1
+  port: 3309
+  db: msproject
