--- a/project-user/Dockerfile
+++ b/project-user/Dockerfile
@@ -3,5 +3,5 @@ WORKDIR /Initial
 COPY ./target/project-user .
 COPY ./config/config-docker.yaml .
 RUN  mkdir config && mv config-docker.yaml config/config.yaml
-EXPOSE 8080 8881
+EXPOSE 8080
 ENTRYPOINT ["./project-user"]
