--- a/project-project/config/config-docker.yaml
+++ b/project-project/config/config-docker.yaml
@@ -1,11 +1,11 @@
 server:
-  name: "project-user"
-  addr: "0.0.0.0:8080"
+  name: "project-project"
+  addr: "0.0.0.0:8081"
 
 zap:
-  debugFileName: "/logs/debug/project-debug.log"
-  infoFileName: "/logs/info/project-info.log"
-  warnFileName: "/logs/error/project-error.log"
+  debugFileName: "/msproject/project-project/logs/debug/project-debug.log"
+  infoFileName: "/msproject/project-project/logs/info/project-info.log"
+  warnFileName: "/msproject/project-project/logs/error/project-error.log"
   maxSize: 500,
   maxAge: 28,
   MaxBackups: 3
@@ -15,8 +15,8 @@ redis:
   password: "123456"
   db: 1
 grpc:
-  name: "user"
-  addr: "0.0.0.0:8881"
+  name: "project"
+  addr: "0.0.0.0:8882"
   version: "1.0.0"
   weight: 2
 etcd:
@@ -25,6 +25,6 @@ etcd:
 mysql:
   username: root
   password: "123456"
-  host: 127.0.0.1
+  host: host.docker.internal
   port: 3309
   db: msproject
