--- a/project-user/config/config-docker.yaml
+++ b/project-user/config/config-docker.yaml
@@ -25,6 +25,6 @@ etcd:
 mysql:
   username: root
   password: "123456"
-  host: 127.0.0.1
+  host: host.docker.internal
   port: 3309
   db: msproject
